font contrast fixed

--- a/app/assets/stylesheets/components/_box.scss
+++ b/app/assets/stylesheets/components/_box.scss
@@ -12,7 +12,7 @@
   margin: 10px auto;
   border-radius: 2px;
   text-align: center;
-  color: white;
+  color: $dog-runner-font-color;
   .btn {
     border: 2px solid white;
     width: 70%;
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 825px;
   }
 }
 
